alt photo profil

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <nav>
         <section id="photo">
             <img src="https://us.123rf.com/450wm/pikepicture/pikepicture1612/pikepicture161200524/68824656-homme-d%C3%A9faut-placeholder-avatar-profil-gris-image-isol%C3%A9-sur-fond-blanc-pour-votre-conception-vector-illu.jpg?ver=6"
-                class="arrondie">
+                alt="photo profil" class="arrondie">
         </section>
         <section id="contact">
             <h2>CONTACT</h2>
