--- a/index.html
+++ b/index.html
@@ -14,54 +14,54 @@
             <h1> <span class="prenom">KEVIN</span><span class="nom"> CHALLUT</span><br />
                 <span class="devel">Dével</span>oppeur web junior</h1><br />
         </section>
+        <section id="formation"></section>
         <h2><span class="formation"><i class="fas fa-graduation-cap"></i>FORMATION</span></h2>
-        <section id="formation">
-            <ul>
-                <li>
-                    <div class="mise_en_page">
-                        <div class="point1"></div>
-                        <div class="annee">2020<br />
-                            Annecy</div>
-                        <div class="etablissement">
-                            <div class="bold">OPENCLASSROOMS</div>
-                            <p class="taille">Parcours Développeur web<br />
-                                Découvrir le quotidien d'un développeur
-                                Transformez son CV en site web</P>
-                        </div>
+        <ul>
+            <li>
+                <div class="mise_en_page">
+                    <div class="point1"></div>
+                    <div class="annee">2020<br />
+                        Annecy</div>
+                    <div class="etablissement">
+                        <div class="bold">OPENCLASSROOMS</div>
+                        <p class="taille">Parcours Développeur web<br />
+                            Découvrir le quotidien d'un développeur
+                            Transformez son CV en site web</P>
                     </div>
-                </li>
-                <li>
-                    <div class="mise_en_page">
-                        <div class="point"></div>
-                        <div class="annee"> 2013-2014<br />
-                            Chambéry</div>
-                        <br />
-                        <div class="etablissement">
-                            <div class="bold">Ecole de coiffure Elite</div>
-                            <p class="taille">CAP Coiffure<br />
-                                Sciences appliquées à la profession<br />
-                                Technologies et techniques de coiffure<br />
-                                Communication et connaissance du milieu professionnel<br />
-                                Arts appliqués à la profession <br />
-                            </p>
-                        </div>
+                </div>
+            </li>
+            <li>
+                <div class="mise_en_page">
+                    <div class="point"></div>
+                    <div class="annee"> 2013-2014<br />
+                        Chambéry</div>
+                    <br />
+                    <div class="etablissement">
+                        <div class="bold">Ecole de coiffure Elite</div>
+                        <p class="taille">CAP Coiffure<br />
+                            Sciences appliquées à la profession<br />
+                            Technologies et techniques de coiffure<br />
+                            Communication et connaissance du milieu professionnel<br />
+                            Arts appliqués à la profession <br />
+                        </p>
                     </div>
-                </li>
-                <li>
-                    <div class="mise_en_page">
-                        <div class="point"></div>
-                        <div class="annee"> 2008-2010<br />
-                            Annecy</div>
-                        <br />
-                        <div class="etablissement">
-                            <div class="bold">Lycée Les Carillon</div>
-                            <p class="taille">BAC PRO commerce<br />
-                            </p>
-                        </div>
+                </div>
+            </li>
+            <li>
+                <div class="mise_en_page">
+                    <div class="point"></div>
+                    <div class="annee"> 2008-2010<br />
+                        Annecy</div>
+                    <br />
+                    <div class="etablissement">
+                        <div class="bold">Lycée Les Carillon</div>
+                        <p class="taille">BAC PRO commerce<br />
+                        </p>
                     </div>
-                </li>
-            </ul>
-            <br />
+                </div>
+            </li>
+        </ul>
+        <br />
         </section>
         <h2><span class="experience"><i class="fas fa-briefcase"></i>EXPERIENCE PROFESSIONELLE</span></h2>
         <section id="experience_professionnelle">
@@ -75,11 +75,10 @@
                         <br />
                         <div class="etablissement">
                             <div class="bold">TEXTO</div>
-                            <p>
                             <div class="line-height"> Responsable de boutique (mission)</div><br />
-                            Management efficace de l'équipe au sein du magasin<br />
-                            Gestion du magasin<br />
-                            Gestion de la clientèle<br />
+                            <p>Management efficace de l'équipe au sein du magasin<br />
+                                Gestion du magasin<br />
+                                Gestion de la clientèle<br />
                             </p>
                         </div>
                     </div>
@@ -92,12 +91,11 @@
                         <br />
                         <div class="etablissement">
                             <div class="bold">TEXTO</div>
-                            <p>
                             <div class="line-height">Premier conseiller de vente</div><br />
-                            Accueil, prise en charge de la clientèle, conseils et assistances, fidélisation.<br />
-                            Merchandising, réassort, rangement et entretient du magasin<br />
-                            Gestion des livraisons et implantation de la collection, gestion des retours et
-                            transferts entre magasins<br />
+                            <p>Accueil, prise en charge de la clientèle, conseils et assistances, fidélisation.<br />
+                                Merchandising, réassort, rangement et entretient du magasin<br />
+                                Gestion des livraisons et implantation de la collection, gestion des retours et
+                                transferts entre magasins<br />
                             </p>
                         </div>
                     </div>
@@ -110,12 +108,11 @@
                         <br />
                         <div class="etablissement">
                             <div class="bold">THE KOOPLES diffusion</div>
-                            <p>
                             <div class="line-height"> Conseiller de vente</div><br />
-                            Accueil, prise en charge de la clientèle, conseils et assistances, fidélisation.<br />
-                            Merchandising, réassort, rangement et entretient du magasin<br />
-                            Gestion des livraisons et implantation de la collection, gestion des retours et
-                            transferts entre magasins<br />
+                            <p> Accueil, prise en charge de la clientèle, conseils et assistances, fidélisation.<br />
+                                Merchandising, réassort, rangement et entretient du magasin<br />
+                                Gestion des livraisons et implantation de la collection, gestion des retours et
+                                transferts entre magasins<br />
                             </p>
                         </div>
                     </div>
@@ -128,12 +125,11 @@
                         <br />
                         <div class="etablissement">
                             <div class="bold">ZARA France</div>
-                            <p>
                             <div class="line-height">Vendeur/Caissier</div><br />
-                            Accueil, prise en charge de la clientèle, encaissement<br />
-                            Merchandising, réassort, rangement et entretient du magasin<br />
-                            Gestion des livraisons et implantation de la collection, gestion des retours et
-                            transferts entre magasins<br />
+                            <p>Accueil, prise en charge de la clientèle, encaissement<br />
+                                Merchandising, réassort, rangement et entretient du magasin<br />
+                                Gestion des livraisons et implantation de la collection, gestion des retours et
+                                transferts entre magasins<br />
                             </p>
                         </div>
                     </div>
