--- a/index.html
+++ b/index.html
@@ -14,54 +14,54 @@
             <h1> <span class="prenom">KEVIN</span><span class="nom"> CHALLUT</span><br />
                 <span class="devel">Dével</span>oppeur web junior</h1><br />
         </section>
-        <section id="formation"></section>
-        <h2><span class="formation"><i class="fas fa-graduation-cap"></i>FORMATION</span></h2>
-        <ul>
-            <li>
-                <div class="mise_en_page">
-                    <div class="point1"></div>
-                    <div class="annee">2020<br />
-                        Annecy</div>
-                    <div class="etablissement">
-                        <div class="bold">OPENCLASSROOMS</div>
-                        <p class="taille">Parcours Développeur web<br />
-                            Découvrir le quotidien d'un développeur
-                            Transformez son CV en site web</P>
+        <section id="formation">
+            <h2><span class="formation"><i class="fas fa-graduation-cap"></i>FORMATION</span></h2>
+            <ul>
+                <li>
+                    <div class="mise_en_page">
+                        <div class="point1"></div>
+                        <div class="annee">2020<br />
+                            Annecy</div>
+                        <div class="etablissement">
+                            <div class="bold">OPENCLASSROOMS</div>
+                            <p class="taille">Parcours Développeur web<br />
+                                Découvrir le quotidien d'un développeur
+                                Transformez son CV en site web</P>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="mise_en_page">
-                    <div class="point"></div>
-                    <div class="annee"> 2013-2014<br />
-                        Chambéry</div>
-                    <br />
-                    <div class="etablissement">
-                        <div class="bold">Ecole de coiffure Elite</div>
-                        <p class="taille">CAP Coiffure<br />
-                            Sciences appliquées à la profession<br />
-                            Technologies et techniques de coiffure<br />
-                            Communication et connaissance du milieu professionnel<br />
-                            Arts appliqués à la profession <br />
-                        </p>
+                </li>
+                <li>
+                    <div class="mise_en_page">
+                        <div class="point"></div>
+                        <div class="annee"> 2013-2014<br />
+                            Chambéry</div>
+                        <br />
+                        <div class="etablissement">
+                            <div class="bold">Ecole de coiffure Elite</div>
+                            <p class="taille">CAP Coiffure<br />
+                                Sciences appliquées à la profession<br />
+                                Technologies et techniques de coiffure<br />
+                                Communication et connaissance du milieu professionnel<br />
+                                Arts appliqués à la profession <br />
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="mise_en_page">
-                    <div class="point"></div>
-                    <div class="annee"> 2008-2010<br />
-                        Annecy</div>
-                    <br />
-                    <div class="etablissement">
-                        <div class="bold">Lycée Les Carillon</div>
-                        <p class="taille">BAC PRO commerce<br />
-                        </p>
+                </li>
+                <li>
+                    <div class="mise_en_page">
+                        <div class="point"></div>
+                        <div class="annee"> 2008-2010<br />
+                            Annecy</div>
+                        <br />
+                        <div class="etablissement">
+                            <div class="bold">Lycée Les Carillon</div>
+                            <p class="taille">BAC PRO commerce<br />
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ul>
-        <br />
+                </li>
+            </ul>
+            <br />
         </section>
         <section id="experience_professionnelle">
             <h2><span class="experience"><i class="fas fa-briefcase"></i>EXPERIENCE PROFESSIONELLE</span></h2>
