--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <link rel="stylesheet" href="CV.css" />
@@ -10,12 +10,12 @@
 
 <body id="bloc_page">
     <main>
-        <section id="titre">
+        <header id="titre">
             <h1> <span class="prenom">KEVIN</span><span class="nom"> CHALLUT</span><br />
-                <span class="devel">Dével</span>oppeur web junior</h1><br />
-        </section>
+                <span class="devel">Dével</span>oppeur web junior</h1>
+        </header>
         <section id="formation">
-            <h2><span class="formation"><i class="fas fa-graduation-cap"></i>FORMATION</span></h2>
+            <h2><i class="fas fa-graduation-cap"></i>FORMATION</h2>
             <ul>
                 <li>
                     <div class="mise_en_page">
@@ -61,7 +61,6 @@
                     </div>
                 </li>
             </ul>
-            <br />
         </section>
         <section id="experience_professionnelle">
             <h2><span class="experience"><i class="fas fa-briefcase"></i>EXPERIENCE PROFESSIONELLE</span></h2>
@@ -162,18 +161,18 @@
         </section>
         <section id="contact">
             <h2>CONTACT</h2>
-            <p class="align a_propos">
-            <div class=" line-height">Adresse<br />
-                Annecy, France</div><br />
-            <div class="line-height">Téléphone<br />
-                06 37 00 49 79</div><br />
-            <div class="line-height">Email<br />
-                k.challut@gmail.com</div><br />
-            <div class="line-height">Site web<br />
-                kevinchallut.com</div><br />
-            <div class="line-height">Skype<br />
-                @k.challut</div>
-            </p>
+            <div class="align a_propos">
+                <div class=" line-height">Adresse<br />
+                    Annecy, France</div><br />
+                <div class="line-height">Téléphone<br />
+                    06 37 00 49 79</div><br />
+                <div class="line-height">Email<br />
+                    k.challut@gmail.com</div><br />
+                <div class="line-height">Site web<br />
+                    kevinchallut.com</div><br />
+                <div class="line-height">Skype<br />
+                    @k.challut</div>
+            </div>
         </section>
         <section id="apropos">
             <h2>A PROPOS DE MOI</h2>
